@@ -2,6 +2,9 @@
 			   ==============
 
 
+* FIXED: PceEmacs: Preserve kill-location over marking variables.
+  Pierpaolo Bernardi.
+
 VERSION 6.6.10, distributed with SWI-Prolog 5.6.10
 ==================================================
 
